# avatar

./: analyze_glb.py  analyze_glb_chair.py  chunk1.b64
ada-frontend/: package-lock.json  package.json
ada-frontend/app/: globals.css  layout.tsx  page.tsx
ada-frontend/app/api/token/: route.ts
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/livekit-token/: route.ts
frontend/components/: AvatarScene.tsx  useLipSync.ts  useRemoteAudioLevel.ts  visemeMap.ts
frontend/public/animations/: Sitting Talking.fbx  sitting.fbx
frontend/public/avatars/: README.md
frontend/public/environments/: retro_computer.glb
livekit-voice-agent/: README.md  agent.py  did_avatar.py  graph.py  interview_answers.txt  pyproject.toml
livekit-voice-agent/chroma_store/: chroma.sqlite3
livekit-voice-agent/scripts/: check_cartesia.py
